contrast fix

--- a/css/search.css
+++ b/css/search.css
@@ -115,7 +115,8 @@ main {
 }
 
 .create-contact-btn {
-    background-color: #27ae60;
+    /*background-color: #27ae60;*/
+    background-color: hsl(145, 61%, 26%);
     color: #fff;
     border: none;
     border-radius: 5px;
